update endpoints to api folder
